--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
-# Ignore Gradle project-specific cache directory
-.gradle
-
-# Ignore Gradle build output directory
 build
+hs_err_pid*
+.gradle
+.idea
+!gradle-wrapper.jar
+*.iml
+/.classpath
+/.project
+/.gradletasknamecache
+/bin/
+/out/
+/.settings/
