--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ repositories {
 ext {
     allureVerion = "2.20.1"
     apacheCommonsLangVersion = "3.12.0"
-    apacheCommonsCollectionsVersion = "4.4"
+    apacheCommonsConfiguration2Version = "2.8.0"
     appiumVerion = "8.3.0"
     junitVersion = "5.9.2"
     lombokVersion = "1.18.26"
@@ -43,6 +43,7 @@ dependencies {
     implementation group: 'io.qameta.allure', name: 'allure-selenide', version: "${allureVerion}"
     implementation group: 'io.appium', name: 'java-client', version: "${appiumVerion}"
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: "${apacheCommonsLangVersion}"
+    implementation group: 'org.apache.commons', name: 'commons-configuration2', version: "${apacheCommonsConfiguration2Version}"
     implementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: "${junitVersion}"
     implementation group: 'io.qameta.allure', name: 'allure-junit5', version: "${allureVerion}"
     implementation group: 'io.qameta.allure', name: 'allure-commandline', version: "${allureVerion}", ext: 'pom'
